# claude-helper

./: .gitignore  CHANGELOG.md  README.md  XIANYU_GUIDE.md  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
resources/: Localizable-zh-HK.strings  Localizable-zh-TW.strings  Localizable.strings  desktop-zh-CN.json  desktop-zh-HK.json  desktop-zh-TW.json  frontend-hardcoded-zh-CN.json  frontend-hardcoded-zh-HK.json  frontend-hardcoded-zh-TW.json  frontend-zh-CN.json  frontend-zh-HK.json  frontend-zh-TW.json  install-mac.command  install-windows.bat  manifest-zh-HK.json  manifest-zh-TW.json  manifest.json  release.json  statsig-zh-HK.json  statsig-zh-TW.json
scripts/: build-mac.sh  build-win.ps1  copy-resources.ps1  copy-resources.sh  generate-icons.sh  install_windows.ps1  patch_claude_zh_cn.py  release.sh  releases-readme.md  setup-updater-key.sh
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ccswitch.rs  commands.rs  guide_images.rs  localizer.rs  main.rs  process.rs  system_info.rs  updater.rs
