[package]
name = "claude-zh-helper"
version = "1.1.9"
description = "Claude Desktop 中文助手 - 一键汉化、更新检测、ccSwitch 配置、第三方 API 引导"
authors = ["Claude ZH Helper Team"]
edition = "2021"
rust-version = "1.77.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dirs = "5"
regex = "1"
